# networth

./: .gitignore  AGENTS.md  CLAUDE.md  DESIGN.md  PACKAGING.md  POST_FRONTEND_TODO.md  PROJECT_OVERVIEW.md  README.md  components.html  index.html  template.html
api/: .env.example  .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  PROJECT_OVERVIEW.md  pyproject.toml
api/app/: __main__.py  config.py  database.py  main.py
api/app/models/: __init__.py
api/app/routers/: health.py
api/app/schemas/: response.py
api/app/scripts/: export_docs.py
api/app/services/: asset_service.py  dashboard_service.py  estate_value_service.py  expense_netting.py  fx_lookup.py  house_price_index_service.py  import_service.py  insurance_value_service.py  journal_types.py  month_utils.py  monthly_report_service.py  report_service.py  setting_service.py  settlement_service.py  stock_category_service.py  stock_service.py  utility_service.py
api/docs/: api-reference.md  openapi.json
api/docs/api-reference/: health.md
api/docs/openapi/: _shared.json  health.json
api/migrations/: env.py
api/migrations/versions/: 2ac6bdb555b5_add_card_expiry_to_credit_card.py  42adcdf00d6d_be_011_add_parent_id_to_code_data.py  4754cf2b6306_init.py  (+16 more)
api/scripts/: migrate_from_legacy.py  seed_dev_data.py
api/tests/: conftest.py  test_config.py  test_database.py  test_exception_handlers.py  test_fx_lookup.py  test_journal_types.py  test_legacy_migration.py  test_main.py  test_main_lifespan.py  test_migration_schema.py  test_month_utils.py  test_response.py  test_router_discipline.py  test_seed_dev_data.py
api/tests/assets/: test_estates.py  (+4 more)
(+1391 files in other folders)
