[project]
name = "networth-api"
version = "0.1.0"
description = "Networth API — personal finance REST API (FastAPI + SQLModel + SQLite)."
requires-python = ">=3.13"
readme = "CLAUDE.md"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlmodel",
    "alembic",
    "pydantic-settings",
    "python-dateutil",
    "yfinance",
    "pandas",
    "httpx",
    "python-multipart>=0.0.29",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "httpx",
]

[project.scripts]
dev = "app.__main__:main"
export-docs = "app.scripts.export_docs:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
